<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/currencyHeadline"
            style="@style/Headline"
            android:text="@string/currency" />

        <View
            android:id="@+id/currencyUnderline"
            style="@style/Underline"
            android:layout_below="@+id/currencyHeadline" />

        <Spinner
            android:id="@+id/currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/currencyUnderline"
            android:layout_marginTop="5dip"
            android:entries="@array/currency_array"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/totalHeadline"
            style="@style/Headline"
            android:layout_below="@+id/currency"
            android:text="@string/total" />
        
        <TextView
            android:id="@+id/account_cash_wallet"
            style="@style/Headline2"
            android:layout_below="@+id/totalHeadline"
            android:text="@string/account_cash_wallet" />
        

        <View
            android:id="@+id/totalUnderline"
            style="@style/Underline"
            android:layout_below="@+id/account_cash_wallet" />

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/totalUnderline"
            android:layout_marginTop="5dip"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/account" />

        <EditText
            android:id="@+id/cash_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dip"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/cash" />

        <EditText
            android:id="@+id/wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/cash_total"
            android:layout_marginTop="5dip"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/wallet" />

        <TextView
            android:id="@+id/savingsHeadline"
            style="@style/Headline"
            android:layout_below="@+id/wallet"
            android:text="@string/savings" />

        <TextView
            android:id="@+id/cash_rate"
            style="@style/Headline2"
            android:layout_below="@+id/savingsHeadline"
            android:text="@string/cash_rate" />
        
        <View
            android:id="@+id/savingsUnderline"
            style="@style/Underline"
            android:layout_below="@+id/cash_rate" />

        <EditText
            android:id="@+id/cash_savings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/savingsUnderline"
            android:layout_marginTop="5dip"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/cash" />

        <EditText
            android:id="@+id/interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/cash_savings"
            android:layout_marginTop="5dip"
            android:inputType="numberSigned|numberDecimal"
            android:hint="@string/interest" />

        <TextView
            android:id="@+id/lendHeadline"
            style="@style/Headline"
            android:layout_below="@+id/interest"
            android:text="@string/lend" />

        <View
            android:id="@+id/lendUnderline"
            style="@style/Underline"
            android:layout_below="@+id/lendHeadline" />

        <EditText
            android:id="@+id/cash_lend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lendUnderline"
            android:layout_marginTop="5dip"
            android:hint="@string/cash"
            android:inputType="numberDecimal|numberSigned" />

        <TextView
            android:id="@+id/borrowedHeadline"
            style="@style/Headline"
            android:layout_below="@+id/cash_lend"
            android:text="@string/borrowed" />

        <View
            android:id="@+id/borrowedUnderline"
            style="@style/Underline"
            android:layout_below="@+id/borrowedHeadline" />

        <EditText
            android:id="@+id/cash_borrowed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/borrowedUnderline"
            android:layout_marginTop="5dip"
            android:hint="@string/cash"
            android:inputType="numberDecimal|numberSigned" />
    </RelativeLayout>

</ScrollView>