<!-- <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border" > -->

    <HorizontalScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:background="@color/summary_background" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            android:padding="6dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/dNet"
                    style="@style/MoneyWindow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_number"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/net" />
            </LinearLayout>

            <TextView
                android:id="@+id/dCurrencyTxt"
                style="@style/currency"
                android:text="@string/sample_txt" />

            <TextView style="@style/equal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="6dp" >

                <TextView
                    android:id="@+id/dIn"
                    style="@style/MoneyWindow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/in" />
            </LinearLayout>

            <TextView style="@style/minus" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="6dp" >

                <TextView
                    android:id="@+id/dOut"
                    style="@style/MoneyWindow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/out" />
            </LinearLayout>

            <TextView style="@style/minus" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="6dp" >

                <TextView
                    android:id="@+id/dSaved"
                    style="@style/MoneyWindow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:text="@string/saved" />
            </LinearLayout>

            <TextView style="@style/minus" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="6dp" >

                <TextView
                    android:id="@+id/dLend"
                    style="@style/MoneyWindow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:text="@string/lend" />
            </LinearLayout>

            <TextView style="@style/plus" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="6dp" >

                <TextView
                    android:id="@+id/dBorrowed"
                    style="@style/MoneyWindow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:text="@string/borrowed" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

<!-- </FrameLayout> -->