<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- CATEGORY LIST -->

        <TextView
            android:id="@+id/o_category_headline"
            style="@style/Headline"
            android:text="@string/category" />

        <View
            android:id="@+id/o_category_underline"
            style="@style/Underline"
            android:layout_below="@+id/o_category_headline" />

        <Spinner
            android:id="@+id/outcome_category_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/o_category_underline" />

        <!-- TITLE -->

        <TextView
            android:id="@+id/o_title_headline"
            style="@style/Headline"
            android:layout_below="@+id/outcome_category_list"
            android:text="@string/title" />

        <View
            android:id="@+id/o_title_underline"
            style="@style/Underline"
            android:layout_below="@+id/o_title_headline" />

        <EditText
            android:id="@+id/outcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/o_title_underline"
            android:layout_marginTop="5dip"
            android:inputType="textCapSentences"
            android:hint="@string/title" />

        <!-- AMOUNT -->

        <TextView
            android:id="@+id/o_amount_headline"
            style="@style/Headline"
            android:layout_below="@+id/outcome_title"
            android:text="@string/amount" />

        <View
            android:id="@+id/o_amount_underline"
            style="@style/Underline"
            android:layout_below="@+id/o_amount_headline" />

        <EditText
            android:id="@+id/outcome_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/o_amount_underline"
            android:layout_marginTop="5dip"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/amount" />
    </RelativeLayout>

</ScrollView>