<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/border" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="1dp"
        android:background="@color/summary_background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/main_total"
                    style="@style/MoneyWindow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/net" />
            </LinearLayout>

            <TextView
                android:id="@+id/currencyTxt"
                style="@style/currency"
                android:text="@string/sample_txt"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/gray" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:orientation="vertical"
                    android:padding="6dp" >

                    <TextView
                        android:id="@+id/main_savings"
                        style="@style/MoneyWindow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        style="@style/Caption"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/savings" />
                </LinearLayout>

                <View style="@style/MoneySeparator" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:orientation="vertical"
                    android:padding="6dp" >

                    <TextView
                        android:id="@+id/main_borrowed"
                        style="@style/MoneyWindow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        style="@style/Caption"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/borrowed" />
                </LinearLayout>

                <View style="@style/MoneySeparator" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:orientation="vertical"
                    android:padding="6dp" >

                    <TextView
                        android:id="@+id/main_lend"
                        style="@style/MoneyWindow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        style="@style/Caption"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/lend" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</FrameLayout>